<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menu_list" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_upload" />
    <item
        android:id="@+id/navigation_web"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_web" />
    <item
        android:id="@+id/navigation_logout"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/menu_logout" />

</menu>
