<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:context=".HomeFragment"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pPhoto"
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:contentDescription="@string/contentDesc"
            android:src="@mipmap/ic_launcher_round"
            tools:src="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/uName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="63dp" />

        <TextView
            android:id="@+id/fp_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fp_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
