<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@android:drawable/btn_dialog"
        app:fabCustomSize="@dimen/item_width"
        tools:layout_editor_absoluteX="363dp"
        tools:layout_editor_absoluteY="715dp" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:layout_editor_absoluteY="699dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Upload"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <Button
                android:id="@+id/btn_datePick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="btn_datePick_Click"
                android:text="@string/date" />

            <EditText
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

            <Button
                android:id="@+id/btn_timePick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="btn_timePick_Click"
                android:text="@string/time" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="none" />

            <TextView
                android:id="@+id/contentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtContent"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:ems="10"
                android:hint="@string/content"
                android:inputType="textMultiLine" />

            <Switch
                android:id="@+id/urgentSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center"
                android:text="@string/urgent"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sub"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_sub_Click"
                android:text="@string/btn_sub" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
